--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,9 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/dev=UTF-8
+encoding//src/main/webapp/WEB-INF/view/admin/books/book_menu.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/admin/util/menu.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/admin/util/topbar.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/view/util/foot.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/view/util/header.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/view/util/menu.jsp=UTF-8
