--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         id="WebApp_ID" version="2.5">         
+         id="WebApp_ID" version="2.5">
 
-    <display-name>lms-lms</display-name>
+    <display-name>zj</display-name>
     
    <!--
 		- Location of the XML file that defines the root application context.
@@ -13,9 +13,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-       <!--  <param-value>classpath:spring/application-config.xml</param-value> -->
-       <param-value>/WEB-INF/mvc-config.xml</param-value>
-       
+        <param-value>/WEB-INF/mvc-config.xml</param-value>
     </context-param>
 
     <listener>
